Design changes and updated readme

--- a/resources/index.html
+++ b/resources/index.html
@@ -10,12 +10,13 @@
                 margin: 0;
                 padding: 0;
             }
+
             .projects {
                 padding: 48px 64px 0 64px;
                 display: grid;
                 grid-column-gap: 75px;
                 grid-row-gap: 50px;
-                grid-template-columns: repeat( auto-fit, minmax(24em, 1fr) );
+                grid-template-columns: repeat( auto-fit, minmax(30%, 1fr) );
              }
 
             .project {
@@ -33,12 +34,12 @@
             .name {
                 background-color: #34515e;
                 color: white;
-                padding: 12px;
+                padding: 20px;
             }
 
             .description {
                 vertical-align:text-top;
-                    font-size: large;
+                font-size: large;
                 padding-right: 32px;
                 padding-left: 8px;
                 margin-block-start:0;
@@ -51,11 +52,13 @@
             }
 
             .header {
+                width: 100vw;
                 text-align:center;
                 margin-block: 0;
             }
 
             .header_wrapper{
+                width: 100vw;
                 padding: 16px;
                 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
             }
@@ -85,10 +88,10 @@
             }
 
             footer {
-                position: absolute;
+                margin-top: 5vh;
                 bottom: 0;
                 left: 1em;
-                    right: 1em;
+                right: 1em;
             }
 
             footer p{
