--- a/resources/index.html
+++ b/resources/index.html
@@ -22,7 +22,8 @@
             .project {
                 position: relative;
                 outline: 5px solid #34515e;
-                height: 16em;
+                height: 20vh;
+                max-width: 100%;
                 box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.5), 0 8px 30px 12px rgba(0, 0, 0, 0.30);
             }
 
@@ -34,15 +35,23 @@
                 background-color: #34515e;
                 color: white;
                 padding: 20px;
+                font-size: 2vh;
+                overflow: hidden;
+                white-space: nowrap;
+                text-overflow: ellipsis;
             }
 
             .description {
                 vertical-align:text-top;
-                font-size: large;
+                font-size: 1.8vh;
                 padding-right: 32px;
                 padding-left: 8px;
                 margin-block-start:0;
                 margin-block-end:0;
+                overflow: hidden;
+                display: -webkit-box;
+                -webkit-line-clamp: 4;
+                -webkit-box-orient: vertical;  
             }
 
             a {
@@ -67,8 +76,8 @@
             }
 
             .icon {
-                width:24px;
-                height:24px;
+                width:1.5vh;
+                height:1.5vh;
                 display:inline-block
             }
 
@@ -84,6 +93,16 @@
             .icons_wrapper p {
                 margin-block-start:0;
                 margin-block-end:0;
+                font-size: 1.5vh;
+            }
+
+            .lang {
+                margin-block-start:0;
+                margin-block-end:0;
+                left:0.2em;
+                bottom:0.2em;
+                font-size: 1.5vh;
+                position:absolute;
             }
 
             footer {
@@ -125,6 +144,7 @@
                     <p>{{ .Stars }}</p>
                     <img alt="star" class="icon" src="/static/star.png">
                 </div>
+                <p class="lang"><strong>&lt;/&gt; </strong>{{ .Language }}</p>
             </div>
         </a>
         {{end}}
