--- a/resources/index.html
+++ b/resources/index.html
@@ -21,8 +21,8 @@
 
             .project {
                 position: relative;
-                outline: 5px solid #34515e;
                 height: 20vh;
+                border-radius: 8px 8px 8px 8px;
                 max-width: 100%;
                 box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.5), 0 8px 30px 12px rgba(0, 0, 0, 0.30);
             }
@@ -39,6 +39,7 @@
                 overflow: hidden;
                 white-space: nowrap;
                 text-overflow: ellipsis;
+                border-radius: 8px 8px 0 0
             }
 
             .description {
