--- a/resources/index.html
+++ b/resources/index.html
@@ -7,6 +7,7 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="/static/styles/style.css">
         <link rel="stylesheet" type="text/css" href="/static/styles/animations.css">
+        <link rel="icon" href="/static/code.png">
     </head>
 <body>
         <a href="{{ .ProfileURL }}">
