--- a/resources/index.html
+++ b/resources/index.html
@@ -7,7 +7,7 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="/static/styles/style.css">
         <link rel="stylesheet" type="text/css" href="/static/styles/animations.css">
-        <link rel="icon" href="/static/code.png">
+        <link rel="icon" href="/static/img/code.png">
     </head>
 <body>
         <a href="{{ .ProfileURL }}">
@@ -25,10 +25,10 @@
                 <p class="description">{{ .Description }}</p>
                 <div class="icons_wrapper">
                     <p>{{ .Forks }}</p>
-                    <img alt="fork" class="icon" src="/static/fork.png">
+                    <img alt="fork" class="icon" src="/static/img/fork.png">
                     <div style="width: 6px"></div>
                     <p>{{ .Stars }}</p>
-                    <img alt="star" class="icon" src="/static/star.png">
+                    <img alt="star" class="icon" src="/static/img/star.png">
                 </div>
                 <p class="lang"><strong>&lt;/&gt; </strong>{{ .Language }}</p>
             </div>
