--- a/resources/index.html
+++ b/resources/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>{{.Title}}</title>
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
@@ -10,7 +11,7 @@
         <link rel="icon" href="/static/img/code.png">
     </head>
 <body>
-        <a href="{{ .ProfileURL }}">
+        <a  href="{{ .ProfileURL }}">
             <div class="header_wrapper">
                 <h1 class="header">
                     {{ .Title }}'s {{ .ServiceName }} projects
