--- a/resources/index.html
+++ b/resources/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>{{.Title}}</title>
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
@@ -11,9 +11,10 @@
         <link rel="icon" href="/static/img/code.png">
     </head>
 <body>
+
         <a  href="{{ .ProfileURL }}">
             <div class="header_wrapper">
-                <h1 class="header">
+                <h1 class="colorful_font header">
                     {{ .Title }}'s {{ .ServiceName }} projects
                 </h1>
             </div>
@@ -22,14 +23,14 @@
 		{{range .Projects}}
         <a href="{{ .Link }}">
             <div class="project" >
-                <h2 class="name">{{ .Name }}</h2>
-                <p class="description">{{ .Description }}</p>
+                <h2 class="name colorful_font">{{ .Name }}</h2>
+                <p class="project_description">{{ .Description }}</p>
                 <div class="icons_wrapper">
-                    <p>{{ .Forks }}</p>
-                    <img alt="fork" class="icon" src="/static/img/fork.png">
-                    <div style="width: 6px"></div>
                     <p>{{ .Stars }}</p>
-                    <img alt="star" class="icon" src="/static/img/star.png">
+                    <span class="icon_helper"><img alt="star" class="icon" src="/static/img/star.png"></span>
+                    <div style="width: 4px"></div>
+                    <p>{{ .Forks }}</p>
+                    <span class="icon_helper"><img alt="fork" class="icon" src="/static/img/fork.png"></span>
                 </div>
                 <p class="lang"><strong>&lt;/&gt; </strong>{{ .Language }}</p>
             </div>
