--- a/resources/index.html
+++ b/resources/index.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>{{.Title}}</title>
-        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="/static/styles/style.css">
         <link rel="stylesheet" type="text/css" href="/static/styles/animations.css">
         <link rel="icon" href="/static/img/code.png">
